#95 Adding var in other packages